Increase image with and image height in the home page by 50%

--- a/assets/files/home.html
+++ b/assets/files/home.html
@@ -1,7 +1,7 @@
 <div class="container my-5">
   <div class="p-5 text-center bg-body-tertiary rounded-3">
-    <img src="app/static/image.jpg" alt="Picture of ryan joseph" , class="image-fluid" , width="100"
-      height="100">
+    <img src="app/static/image.jpg" alt="Picture of ryan joseph" , class="image-fluid my-picture" , width="150"
+      height="150">
 
     <h1 class="text-body-emphasis">Hello! I'm Ryan!</h1>
     <p class="col-lg-8 mx-auto fs-5 text-muted">
